src_old/objects/JobImage__c.object
<CustomObject>
    <fields>
        <fullName>AIImageURL__c</fullName>
        <formula>$Setup.SurveyPhotoViewerSetting__c.AIImageURL__c + ImageURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AIImageURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AILabelName__c</fullName>
        <formula>ProjectServiceQuestion__r.AILabel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AI Label Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AILabel__c</fullName>
        <formula>ProjectServiceQuestion__r.AILabel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AI Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIMatchedStates__c</fullName>
        <formula>IF(AILabel__c == null, &apos;Not Enabled&apos;,
IF(AILabelName__c == ClassifiedLabel__c, &apos;Matched&apos;, &apos;UnMatched&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AI Matched States</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassifiedLabel__c</fullName>
        <label>Classified Label</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassifiedResponse__c</fullName>
        <label>Classified Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CloudinaryImageUrl__c</fullName>
        <formula>$Setup.SurveyPhotoViewerSetting__c.CloudinaryImageURL__c + ImageURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CloudinaryImageUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageContentType__c</fullName>
        <label>Image Content Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageDescription__c</fullName>
        <label>Image Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageName__c</fullName>
        <label>Image Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageThumbnailURL__c</fullName>
        <description>A thumbnail image URL</description>
        <label>ImageThumbnailURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ImageURL__c</fullName>
        <label>ImageURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDuplicated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>There is already another similar photo in the table.</description>
        <inlineHelpText>This photo is duplicated.</inlineHelpText>
        <label>Is Duplicated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsErrored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>an error flag to indicate that the photo can not be hashed</description>
        <label>Is Errored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFavorite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsFavorite</description>
        <label>IsFavorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUserFavorite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The external user favorite indicator</description>
        <inlineHelpText>The external user favorite indicator</inlineHelpText>
        <label>Is User Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobAttempt__c</fullName>
        <label>Job Attempt</label>
        <referenceTo>JobAttempt__c</referenceTo>
        <relationshipLabel>Job Images</relationshipLabel>
        <relationshipName>Job_Images</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JobDateReported__c</fullName>
        <label>Job Date Reported</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Job Images</relationshipLabel>
        <relationshipName>Job_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Location</description>
        <label>ParentLocation</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>ParentLocation</relationshipLabel>
        <relationshipName>Job_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PhotoHash__c</fullName>
        <description>PhotoHash</description>
        <label>PhotoHash</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoorQualityCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PoorQualityCheck</description>
        <label>PoorQualityCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessingPickupDateTime__c</fullName>
        <label>Processing Pickup Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProjectLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location</label>
        <referenceTo>ProjectLocation__c</referenceTo>
        <relationshipLabel>Job Images</relationshipLabel>
        <relationshipName>Job_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectServiceQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Service Question</label>
        <referenceTo>ProjectServiceQuestion__c</referenceTo>
        <relationshipLabel>Job Images</relationshipLabel>
        <relationshipName>Job_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Service</label>
        <referenceTo>ProjectService__c</referenceTo>
        <relationshipLabel>Job Images</relationshipLabel>
        <relationshipName>Job_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Job Images</relationshipLabel>
        <relationshipName>Job_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Job Images</relationshipLabel>
        <relationshipName>Job_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReadyForProcessing__c</fullName>
        <formula>AND(
    ISBLANK(ImageURL__c), 
    OR(ISBLANK(ProcessingPickupDateTime__c),TRUE), NOT(ISBLANK(AttachmentId__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready For Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Job Images</relationshipLabel>
        <relationshipName>Job_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThumbnailURL__c</fullName>
        <formula>$Setup.SurveyPhotoViewerSetting__c.CloudinaryThumbnailURL__c  + ImageURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ThumbnailURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isClassified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Classified</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Image</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JI-{000000000}</displayFormat>
        <label>Job Images Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>